--- a/Do_it_algorithms_04(스택과_큐).ipynb
+++ b/Do_it_algorithms_04(스택과_큐).ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+MN9TM2PynbPuLfn3YBAE",
+      "authorship_tag": "ABX9TyMc+51Cb3n0O2bCQyBHK55T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 04-1 스택이란? (LIFO)\n",
+        "## 04-1 스택이란? (LIFO) LAST IN FIRST OUT\n",
         "\n",
         "스택은 데이터를 임시 저장할 때 사용하는 자료구조\n",
         "\n",
@@ -223,14 +223,14 @@
         "  def push(self,value:Any) -> None:\n",
         "    \"\"\"스택에 value를 푸시(데이터를 넣음)\"\"\"\n",
         "    if self.is_full(): # 스택이 가득 차 있는 경우\n",
-        "      raise FixedStack.Full #예외 처리 발생\n",
+        "      raise FixedStack.Full #예외 처리 발생 # FixedStack에 있는 클래스속성인 FixedStack.Full 접근\n",
         "    self.stk[self.ptr]=value\n",
         "    self.ptr+=1\n",
         "\n",
         "  def pop(self) -> Any:\n",
         "    \"\"\"스택에서 데이터를 pop(꼭대기 데이터를 꺼냄)\"\"\"\n",
         "    if self.is_empty(): # 스택이 비어있는 경우\n",
-        "        raise FixedStack.Empty # 예외 처리 발생\n",
+        "        raise FixedStack.Empty # 예외 처리 발생 # FixedStack.Empty 접근\n",
         "    self.ptr-=1\n",
         "    return self.stk[self.ptr]\n",
         "\n",
@@ -498,17 +498,75 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 고정 길이 스택 클래스 구현하기(collections.deque를 사용)\n"
+      ],
       "metadata": {
         "id": "5XifhdbKJzXH"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing import Any\n",
+        "from collections import deque\n",
+        "\n",
+        "class Stack:\n",
+        "  \"\"\"고정 길이 스택 클래스(collections.deque 사용)\"\"\"\n",
+        "  def __init__(self, maxlen:int=256)->None:\n",
+        "    '''스택 초기화'''\n",
+        "    self.capacity=maxlen # 256의 고정 길이 스택\n",
+        "    self.__stk=deque([],maxlen) # 비공개 속성으로 __stk 만들기 (스택)\n",
+        "\n",
+        "  def __len__(self) -> int:\n",
+        "    '''스택에 쌓여 있는 데이터 개수를 반환'''\n",
+        "    return len(self.__stk) # 스택(__stk)에 들어가 있는 원소개수 반환\n",
+        "\n",
+        "  def is_empty(self) -> bool:\n",
+        "    '''스택이 비어있는지 판단'''\n",
+        "    return not self.__stk\n",
+        "\n",
+        "  def is_full(self) -> bool:\n",
+        "    '''스택이 가득차 있는지 확인하기'''\n",
+        "    return len(self.__stk) >= self.__stk.maxlen\n",
+        "\n",
+        "  def push(self, value:Any) -> None:\n",
+        "    '''스택에 value를 푸시'''\n",
+        "    self.__stk.append(value)\n",
+        "\n",
+        "  def pop(self) -> Any:\n",
+        "    '''스택에서 데이터를 팝'''\n",
+        "    return self.__stk.pop()\n",
+        "\n",
+        "  def peek(self) -> Any:\n",
+        "    '''스택에서 데이터를 피크'''\n",
+        "    return self.__stk[-1]\n",
+        "\n",
+        "  def clear(self) -> None:\n",
+        "    return self.__stk.clear()\n",
+        "\n",
+        "  def find(self,value:Any) -> Any:\n",
+        "    '''스택에서 value를 차자 인덱스를 반환'''\n",
+        "    try:\n",
+        "     # return self.__stk.find(value) 내가 작성한 코드인데 find 함수는 문자열에서 쓰인다. index를 쓰는게 맞음\n",
+        "     return self.__stk.index(value)\n",
+        "    # else: # 찾고자 하는 밸류가 없을 때  => 내가 작성한 코드인데 오류 else 혼자는 try문에서 else는 혼자 못오는것 같다.\n",
+        "    except ValueError:\n",
+        "      print('찾고자 하는 value가 없습니다.')\n",
+        "      return -1\n",
+        "  def count(self,value:Any) -> int:\n",
+        "    '''스택에 포함되어 있는 value의 개수 반환'''\n",
+        "    return self.__stk.count(value)\n",
+        "\n",
+        "  def __countain__(self,value:Any) -> bool:\n",
+        "    '''스택에 value가 포함되어 있는지 판단 (value in __stk)'''\n",
+        "    return self.count(value)\n",
+        "\n",
+        "  def dump(self) -> int:\n",
+        "    '''스택 안에 있는 모든 데이터를 나열 (바닥에서 꼭대기)'''\n",
+        "    print(list(self.__stk))\n"
+      ],
       "metadata": {
         "id": "uN2s7hAMJzVO"
       },
@@ -516,28 +574,488 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 04-2 큐란? (FIFO) FIRST IN FIRST OUT\n",
+        "\n",
+        "스택과 같이 데이터를 임시 저장하는 자료구조이다. 하지만 스택처럼 가장 나중에 넣은 데이터를 가장 먼저 꺼내지 않는다."
+      ],
       "metadata": {
         "id": "cYC8gy8oJzTV"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "큐는 가장 먼저 넣은 데이터를 가장 먼저 꺼내는 선입선출 구조이다.\n",
+        "\n",
+        "* 인큐: 큐에 데이터를 추가하는 작업\n",
+        "* 디큐: 데이터를 꺼내는 작업\n",
+        "* 프론트: 데이터를 꺼내는 쪽\n",
+        "* 리어: 데이터를 넣는 쪽"
+      ],
       "metadata": {
         "id": "UaBydqiaJzNV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 배열로 큐 구현하기\n",
+        "\n",
+        "스택과 마찬가지로 큐 또한 배열을 사용하여 구현할 수 있다.\n",
+        "\n",
+        "* 데이터를 추가하는 인큐 과정에서는 O(1) 복잡도를 가지고 있다\n",
+        "\n",
+        "* 하지만 데이터를 꺼내는 과정인 디큐에서는 O(n)의 복잡도를 가지고 있어서 효율적이진 못하다.\n",
+        "\n",
+        "-> 맨 앞의 원소인 que[0]을 꺼내고 que[1]~ que[-1] 원소들을 앞으로 당겨야하므로 비효율적이라고 표현한 것"
+      ],
+      "metadata": {
+        "id": "E6lDWf8IJzJc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 링 버퍼로 큐 구현하기\n",
+        "\n",
+        "디큐할 때 배열 안의 원소를 옮기지 않는 큐를 구현\n",
+        "\n",
+        "이럴 때 사용하는 자료구조가 링 버퍼(ring buffer)다.\n",
+        "\n",
+        "링 버퍼는 배열의 맨 끝의 원소 뒤에 맨 앞의 원소가 연결되는 자료구조이다.\n"
+      ],
+      "metadata": {
+        "id": "MA41vbnfDv7W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "배열을 링처럼 되어 있다고 생각하고 데이터를 처리하는 자료구조"
+      ],
+      "metadata": {
+        "id": "sBXMGUaSHXkd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "링 버퍼를 사용하는 큐를 구현하는 프로그램을 만들어보자.\n",
+        "\n",
+        "(고정 길이 큐)"
+      ],
+      "metadata": {
+        "id": "NXuPRw7IHeCF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import Any\n",
+        "\n",
+        "class FixedQueue:\n",
+        "\n",
+        "  class Empty(Exception):\n",
+        "    '''비어 있는 FixedQueue에서 디큐 또는 피크할 때 내보내는 예외처리'''\n",
+        "    pass\n",
+        "\n",
+        "  class Full(Exception):\n",
+        "    '''가득 차 있는 FixedQueue에서 인큐할 때 내보내는 예외 처리'''\n",
+        "    pass\n",
+        "\n",
+        "  def __init__(self,capacity:int) -> None:\n",
+        "    '''큐 초기화'''\n",
+        "    self.no=0 # 현재 데이터 개수\n",
+        "    self.front=0 # 맨 앞 원소 커서, 개인적인 생각은 front와 rear의 설정이 중요하다고 생각됨\n",
+        "    self.rear=0 # 맨 끝 원소 커서\n",
+        "    self.capacity=capacity # 큐의 크기\n",
+        "    self.que = [None] * capacity # 큐의 본체\n",
+        "\n",
+        "  def __len__(self) -> int:\n",
+        "    '''큐에 있는 모든 데이터의 개수 반환'''\n",
+        "    return self.no\n",
+        "\n",
+        "  def is_empty(self) -> bool:\n",
+        "    '''큐가 비어있는지 판단'''\n",
+        "    return self.no <= 0\n",
+        "\n",
+        "  def is_full(self) -> bool:\n",
+        "    '''큐가 가득 차있는지 판단'''\n",
+        "    return self.no >= self.capacity"
+      ],
+      "metadata": {
+        "id": "Wd0gbl8FHr_9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 데이터를 넣는 enque() 함수\n",
+        "\n",
+        "enque() 함수는 큐에 데이터를 인큐합니다.\n",
+        "\n",
+        "하지만 큐가 가득 차서 인큐할 수 없는 경우에 예외 처리인 FixedQueue.Full을 내보낸다."
+      ],
+      "metadata": {
+        "id": "F1ImQDY2JuF2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def enque(self,x:Any) -> None:\n",
+        "  '''데이터 x를 인큐'''\n",
+        "  if self.is_full():\n",
+        "    raise FixedQueue.Full\n",
+        "  self.que[self.front]=x\n",
+        "  self.no+=1\n",
+        "  self.rear+=1\n",
+        "  if self.rear == self.capacity: # 배열의 마지막 인덱스는 capacity-1인데, 인큐한 뒤 rear+1을 하였는데 capacity와 같다면 0으로 초기화 시켜준다. 그래야 다음 인큐시에 오류가 안남\n",
+        "    self.rear=0"
+      ],
+      "metadata": {
+        "id": "lXXuYigmJ7US"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 데이터를 꺼내는 deque() 함수\n",
+        "\n",
+        "deque()함수는 큐의 맨 앞부터 데이터를 디큐하여 그 값을 반환한다.\n",
+        "\n",
+        "그러나 큐가 비어 있어 디큐할 수 없는 경우 예외 처리인 FixedQueue.Empty를 내보낸다."
+      ],
+      "metadata": {
+        "id": "3djcqfeELRFc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def deque(self) -> Any:\n",
+        "  '''데이터를 디큐'''\n",
+        "\n",
+        "  if self.is_empty():\n",
+        "    raise FixedQueue.Empty\n",
+        "  x=self.que[self.front]\n",
+        "  self.front+=1\n",
+        "  self.no-=1\n",
+        "  if self.front == self.capacity:\n",
+        "    self.front = 0\n",
+        "  return x"
+      ],
+      "metadata": {
+        "id": "D03N8hK2LRBo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 데이터를 들여다 보는 peek()함수\n",
+        "\n",
+        "peek()함수는 맨 앞 데이터, 즉 다음 디큐에서 꺼낼 데이터를 들여다 봅니다.\n",
+        "\n",
+        "que[front]의 값을 반환할 뿐 데이터를 꺼내지 않으므로 front,rear,no의 값은 변하지 않습니다.\n",
+        "\n",
+        "큐가 비어 있을 때는 예외 처리FixeQueue.Empty를 내보낸다."
+      ],
+      "metadata": {
+        "id": "UAvUtxIZTxpo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 검색하는 find() 함수\n",
+        "\n",
+        "find() 함수는 큐의 배열에서 value와 같은 데이터가 포함되어 있는 위치를 알아낸다.\n",
+        "\n",
+        "맨 앞에서 맨 끝 쪽으로 선형 검색을 수행한다.\n",
+        "\n",
+        "물론 스캔은 배열의 맨 앞 원소가 아니라 큐의 맨 앞 원소(front)부터 시작한다.\n",
+        "\n",
+        "따라서 스캔할 때 주목하는 idx를 구하는 식은 (i+idx) % capacity이다.\n",
+        "\n",
+        "검색에 성공하면 찾은 원소의 인덱스를 반환, 실패하면 -1을 반환한다."
+      ],
+      "metadata": {
+        "id": "flI3Wnx_YBkh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 데이터 개수를 세는 count() 함수\n",
+        "\n",
+        "count() 함수는 큐에 있는 데이터(value)의 개수를 구하여 반환합니다."
+      ],
+      "metadata": {
+        "id": "OTmcSnEUZ0NV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 데이터가 포함되어 있는지를 판단하는 `__contains__()` 함수\n",
+        "\n",
+        "`__contains__()` 함수는 큐에 데이터가 들어 있는지를 판단합니다.\n",
+        "\n",
+        "들어 있으면 True 그렇지 않으면 False\n",
+        "\n",
+        "내부의 count()함수를 호출하여 구현"
+      ],
+      "metadata": {
+        "id": "KUUBR2K3Z0xO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 큐의 전체 원소를 삭제하는 clear() 함수\n",
+        "\n",
+        "clear()함수는 현재 큐에 들어있는 모든 데이터를 삭제"
+      ],
+      "metadata": {
+        "id": "So4B6vEGZ0u1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 큐의 전체 데이터를 출력하는 dump() 함수\n",
+        "\n",
+        "dump() 함수는 큐에 들어 있는 모든 데이터를 맨 앞부터 맨 끝쪽으로 순서대로 출력합니다.\n",
+        "\n",
+        "하지만 큐가 비어 있으면 `큐가 비어 있습니다`라고 출력한다."
+      ],
+      "metadata": {
+        "id": "OMAElMqjZ0tV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def peek(self) -> Any:\n",
+        "  \"\"\"큐에서 데이터를 피크(맨 앞 데이터를 들여다봄)\"\"\"\n",
+        "  if self.is_empty():\n",
+        "    raise FixedQueue.Empty # 큐가 비어 있는 경우에는 raise를 통해 FixedQueue.Empty 예외를 발생시킨다.\n",
+        "  return self.que[self.front]\n",
+        "\n",
+        "def find(self,value:Any)->int:\n",
+        "  \"\"\"큐에서 value를 찾아 인덱스를 반환 (없으면 -1을 반환)\"\"\"\n",
+        "  for i in range(self.no):\n",
+        "    idx=(i+self.front)%self.capacity\n",
+        "    if self.que[idx]==value:\n",
+        "      return idx\n",
+        "  return -1\n",
+        "\n",
+        "def count(self,value:Any) -> int:\n",
+        "  c=0\n",
+        "  for i in range(self.no):\n",
+        "    idx=(i+self.front)%self.capacity\n",
+        "    if self.que[idx] == value:\n",
+        "      c += 1\n",
+        "  return c\n",
+        "\n",
+        "def __contains__(self,value:Any) -> bool:\n",
+        "  \"\"\"큐에 value가 있는지 판단\"\"\"\n",
+        "  return self.count(value)\n",
+        "\n",
+        "def clear(self) -> None:\n",
+        "  self.no =self.front =self.rear= 0\n",
+        "\n",
+        "def dump(self) -> None:\n",
+        "  \"\"\"모든 데이터를 맨 앞부터 맨 끝 순으로 출력\"\"\"\n",
+        "  if self.is_empty():\n",
+        "    print(\"큐가 비어있습니다.\")\n",
+        "  else:\n",
+        "    for i in range(self.no):\n",
+        "      print(self.que[(i+self.front)%self.capacity],end='')\n",
+        "    print()"
+      ],
+      "metadata": {
+        "id": "sayoYHUaZ0qN"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing import Any\n",
+        "\n",
+        "class FixedQueue:\n",
+        "\n",
+        "  class Empty(Exception):\n",
+        "    '''비어 있는 FixedQueue에서 디큐 또는 피크할 때 내보내는 예외처리'''\n",
+        "    pass\n",
+        "\n",
+        "  class Full(Exception):\n",
+        "    '''가득 차 있는 FixedQueue에서 인큐할 때 내보내는 예외 처리'''\n",
+        "    pass\n",
+        "\n",
+        "  def __init__(self,capacity:int) -> None:\n",
+        "    '''큐 초기화'''\n",
+        "    self.no=0 # 현재 데이터 개수\n",
+        "    self.front=0 # 맨 앞 원소 커서, 개인적인 생각은 front와 rear의 설정이 중요하다고 생각됨\n",
+        "    self.rear=0 # 맨 끝 원소 커서\n",
+        "    self.capacity=capacity # 큐의 크기\n",
+        "    self.que = [None] * capacity # 큐의 본체\n",
+        "\n",
+        "  def __len__(self) -> int:\n",
+        "    '''큐에 있는 모든 데이터의 개수 반환'''\n",
+        "    return self.no\n",
+        "\n",
+        "  def is_empty(self) -> bool:\n",
+        "    '''큐가 비어있는지 판단'''\n",
+        "    return self.no <= 0\n",
+        "\n",
+        "  def is_full(self) -> bool:\n",
+        "    '''큐가 가득 차있는지 판단'''\n",
+        "    return self.no >= self.capacity\n",
+        "\n",
+        "  def enque(self,x:Any) -> None:\n",
+        "    '''데이터 x를 인큐'''\n",
+        "    if self.is_full():\n",
+        "      raise FixedQueue.Full\n",
+        "    self.que[self.rear]=x\n",
+        "    self.no+=1\n",
+        "    self.rear+=1\n",
+        "    if self.rear == self.capacity: # 배열의 마지막 인덱스는 capacity-1인데, 인큐한 뒤 rear+1을 하였는데 capacity와 같다면 0으로 초기화 시켜준다. 그래야 다음 인큐시에 오류가 안남\n",
+        "      self.rear=0\n",
+        "\n",
+        "  def deque(self) -> Any:\n",
+        "    '''데이터를 디큐'''\n",
+        "    if self.is_empty():\n",
+        "      raise FixedQueue.Empty\n",
+        "    x=self.que[self.front]\n",
+        "    self.front+=1\n",
+        "    self.no-=1\n",
+        "    if self.front == self.capacity:\n",
+        "      self.front = 0\n",
+        "    return x\n",
+        "  def peek(self) -> Any:\n",
+        "    \"\"\"큐에서 데이터를 피크(맨 앞 데이터를 들여다봄)\"\"\"\n",
+        "    if self.is_empty():\n",
+        "      raise FixedQueue.Empty # 큐가 비어 있는 경우에는 raise를 통해 FixedQueue.Empty 예외를 발생시킨다.\n",
+        "    return self.que[self.front]\n",
+        "\n",
+        "  def find(self,value:Any)->int:\n",
+        "    \"\"\"큐에서 value를 찾아 인덱스를 반환 (없으면 -1을 반환)\"\"\"\n",
+        "    for i in range(self.no):\n",
+        "      idx=(i+self.front)%self.capacity\n",
+        "      if self.que[idx]==value:\n",
+        "        return idx\n",
+        "    return -1\n",
+        "\n",
+        "  def count(self,value:Any) -> int:\n",
+        "    c=0\n",
+        "    for i in range(self.no):\n",
+        "      idx=(i+self.front)%self.capacity\n",
+        "      if self.que[idx] == value:\n",
+        "        c += 1\n",
+        "    return c\n",
+        "\n",
+        "  def __contains__(self,value:Any) -> bool:\n",
+        "    \"\"\"큐에 value가 있는지 판단\"\"\"\n",
+        "    return self.count(value)\n",
+        "\n",
+        "  def clear(self) -> None:\n",
+        "    self.no =self.front =self.rear= 0\n",
+        "\n",
+        "  def dump(self) -> None:\n",
+        "    \"\"\"모든 데이터를 맨 앞부터 맨 끝 순으로 출력\"\"\"\n",
+        "    if self.is_empty():\n",
+        "      print(\"큐가 비어있습니다.\")\n",
+        "    else:\n",
+        "      for i in range(self.no):\n",
+        "        print(self.que[(i+self.front)%self.capacity],end='  ')\n",
+        "      print()"
+      ],
       "metadata": {
-        "id": "E6lDWf8IJzJc"
+        "id": "ihXi8UUHiYH9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 링 버퍼로 큐 프로그램 만들기\n",
+        "\n",
+        "큐 FixedQueue 클래스를 실제 사용하는 프로그램"
+      ],
+      "metadata": {
+        "id": "QWviLc8ci23l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from enum import Enum\n",
+        "# from fixed_queue import FixedQueue\n",
+        "\n",
+        "Menu=Enum('Menu',['인큐','디큐','피크','검색','덤프','종료'])\n",
+        "\n",
+        "def select_menu() -> Menu:\n",
+        "  \"\"\"메뉴 선택\"\"\"\n",
+        "  s = [f'({m.value}){m.name}' for m in Menu]\n",
+        "  while True:\n",
+        "    print(*s,sep='    ',end='')\n",
+        "    n=int(input(\": \"))\n",
+        "    if 1 <= n <= len(Menu):\n",
+        "      return Menu(n)\n",
+        "\n",
+        "q = FixedQueue(64) # 최대 64개를 인큐할 수 있는 큐\n",
+        "\n",
+        "while True:\n",
+        "  print(f'현재 데이터 개수: {len(q)} / {q.capacity}') # q.capacity 인스턴스.속성 접근\n",
+        "  menu=select_menu() # 메뉴 선택\n",
+        "\n",
+        "  if menu == Menu.인큐:\n",
+        "    x = input('인큐할 데이터를 입력하세요.: ')\n",
+        "    try:\n",
+        "      q.enque(x)\n",
+        "    except FixedQueue.Full as e:\n",
+        "      print('큐가 가득 찼습니다.', e)\n",
+        "\n",
+        "  elif menu == Menu.디큐: # 디큐\n",
+        "    try:\n",
+        "      x=q.deque()\n",
+        "      print(f'디큐한 데이터는 {x}입니다.')\n",
+        "    except FixedQueue.Empty as e:\n",
+        "      print('큐가 비어 있습니다. ',e)\n",
+        "\n",
+        "  elif menu == Menu.피크:\n",
+        "    try:\n",
+        "      x=q.peek()\n",
+        "      print(f'피크한 데이터는 {x}입니다.')\n",
+        "    except FixedQueue.Empty as e:\n",
+        "      print(\"큐가 비어있습니다. \",e)\n",
+        "\n",
+        "  elif menu == Menu.검색:\n",
+        "    x=input(\"검색할 값을 입력하세요.: \")\n",
+        "    if x in q:\n",
+        "      print(f'{q.count(x)}개 포함되고, 맨 앞의 위치는 {q.find(x)}입니다.')\n",
+        "    else:\n",
+        "      print('검색값을 찾을 수 없습니다.')\n",
+        "\n",
+        "  elif menu == Menu.덤프:\n",
+        "    q.dump()\n",
+        "  else:\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "j2F8rd48jEI3"
       },
       "execution_count": null,
       "outputs": []
