Colaboratory를 통해 생성됨

--- a/Do_it_algorithms06(정렬).ipynb
+++ b/Do_it_algorithms06(정렬).ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMnvJrsM2++TFpnbFZe0DWW",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPfeyJXQ4TCi920c0iVPnCg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +131,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing import MutableSequence\n",
+        "\n",
+        "def bubble_sort_verbose(a:MutableSequence) -> None:\n",
+        "  \"\"\"버블 정렬(정렬 과정 출력)\"\"\"\n",
+        "  ccnt = 0 # 비교횟수\n",
+        "  scnt = 0 # 교환횟수\n",
+        "  n = len(a)\n",
+        "  for i in range(n-1):\n",
+        "    print(f'패스 {i+1}')\n",
+        "    for j in range(n-1,i,-1):\n",
+        "      ccnt+=1\n",
+        "      for m in range(0,n-1):\n",
+        "        print(f\"{a[m]:2}\" + (' ' if m != j-1 else\n",
+        "                             ' +' if a[j-1] > a[j] else ' -'),\n",
+        "                            end='')\n",
+        "      if a[j-1] > a[j]:\n",
+        "        a[j],a[j-1]=a[j-1],a[j]\n",
+        "        scnt+=1\n",
+        "      print(f'{a[n-1]:2}')\n",
+        "      for m in range(0,n-1):\n",
+        "        print(f'{a[m]:2}',end=' ')\n",
+        "      print(f'{a[n-1]:2}')\n",
+        "    print(f'비교를 {ccnt}번 했습니다.')\n",
+        "    print(f'교환을 {scnt}번 했습니다.')\n",
+        "\n",
+        "bubble_sort_verbose([6,4,3,7,1,9,8])"
+      ],
       "metadata": {
         "id": "p4YCo_rkMm0j"
       },
@@ -138,17 +166,75 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 단순 선택 정렬\n",
+        "\n",
+        "가장 작은 원소부터 선택해 알맞은 위치로 옮기는 작업을\n",
+        "반복하며 정렬하는 알고리즘"
+      ],
       "metadata": {
-        "id": "sauxpq9VMizz"
+        "id": "7xl4I3r46lnK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def selection_sort(a)->None:\n",
+        "  \"\"\"단순 선택 정렬\"\"\"\n",
+        "  n=len(a)\n",
+        "  for i in range(n-1):\n",
+        "    min=i\n",
+        "    for j in range(i+1,n):\n",
+        "      if a[min] > a[j]:\n",
+        "        min=j\n",
+        "    a[i],a[min]=a[min],a[i]"
+      ],
+      "metadata": {
+        "id": "PTciUnrV_A8R"
       },
       "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 단순 삽입 정렬\n",
+        "\n",
+        "주목한 원소보다 더 앞쪽에서 알맞은 위치로 삽입하여 정렬하는 알고리즘이다\n"
+      ],
+      "metadata": {
+        "id": "sauxpq9VMizz"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing import MutableSequence\n",
+        "def insertion_sort(a: MutableSequence) -> None:\n",
+        "  n=len(a)\n",
+        "  for i in range(1,n):\n",
+        "    tmp=a[i]\n",
+        "    j=i\n",
+        "    while j>0 and a[j-1]>tmp:\n",
+        "      a[j]=a[j-1]\n",
+        "      j-=1\n",
+        "    a[j]=tmp\n",
+        "\n",
+        "if __name__=='__main__':\n",
+        "  print(\"단순 삽입 정렬을 수행합니다.\")\n",
+        "  num = int(input(\"원소 수를 입력하세여: \"))\n",
+        "  x=[None]*num\n",
+        "\n",
+        "  for i in range(num):\n",
+        "    x[i] = int(input(f'x[{i}]: '))\n",
+        "\n",
+        "  insertion_sort(x)\n",
+        "\n",
+        "  print('오름 차순으로 정렬했습니다.')\n",
+        "  for i in range(num):\n",
+        "    print(f'x[{i}] = {x[i]}')"
+      ],
       "metadata": {
         "id": "9j-vPf60MjK8"
       },
@@ -156,17 +242,33 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 셸 정렬"
+      ],
       "metadata": {
         "id": "LtWHcxfsMjYG"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing import MutableSequence\n",
+        "\n",
+        "def shell_sort(a: MutableSequence) -> None:\n",
+        "  '''셸 정렬'''\n",
+        "  n = len(a)\n",
+        "  h = n // 2\n",
+        "  while h > 0:\n",
+        "    for i in range(h,n):\n",
+        "      j = i - h\n",
+        "      tmp=a[i]\n",
+        "      while j>=0 and a[j] > tmp:\n",
+        "        a[j+h] = a[j]\n",
+        "        j-=h\n",
+        "        a[j+h]=tmp\n",
+        "    h//=2\n"
+      ],
       "metadata": {
         "id": "8Zpj1K1zMjkf"
       },
@@ -174,13 +276,16 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "알고리즘 코딩을 외워야하는건가 ..? 이론은 알겠는데, 코드로 구현을 못하겠다..\n",
+        "구현한거 해석도 안되고\n",
+        "\n",
+        "아니면 이해했다고 착각을 하는 건가?"
+      ],
       "metadata": {
         "id": "hVNHnV3oMjva"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
